--- a/mittun/Makefile
+++ b/mittun/Makefile
@@ -1,5 +1,27 @@
+clean:
+	@echo "Removing trash..."
+	@find . -name "*.pyc" -exec rm -f {} \;
+	@find . -name "*.swp" -exec rm -f {} \;
+	@echo 'Done!'
+
 test:
+	@echo "Running all tests..."
 	@python manage.py test
 
-runserver:
+unit:
+	echo "Running unit tests..."
+	@python manage.py test unit
+
+functional:
+	@echo "Running functional tests..."
+	@python manage.py test functional
+
+acceptance:
+	@echo "Running acceptance tests..."
+	@python manage.py test acceptance
+
+run:
 	@python manage.py runserver
+
+shell:
+	@python manage.py shell
