--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ coverage==3.4
 specloud==0.4.2
 -e git+git://github.com/cobrateam/splinter.git#egg=splinter
 
-# development
+# production
 MySQL-Python==1.2.3
 django==1.3
 South==0.7.3
+PIL==1.1.7
