--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coverage==3.4
 specloud==0.4.2
 splinter
 PyYAML
+-e git+git://github.com/vbmendes/django-transmeta.git#egg=django-transmeta
 
 # production
 MySQL-Python==1.2.3
